gcc/testsuite/rust/rustc/ui/rfc-2091-track-caller/error-with-main.rs
#[track_caller] // { dg-error "" "" { target *-*-* } }
fn main() {
    panic!("{}: oh no", std::panic::Location::caller());
}

